<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">

    <AutoCompleteTextView
        android:id="@+id/dialog_add_order_cart_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_product"
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:theme="@style/ShoppingListEditTextTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/dialog_add_order_cart_et_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/count"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:theme="@style/ShoppingListEditTextTheme" />

        <EditText
            android:id="@+id/dialog_add_order_cart_et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/price"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:theme="@style/ShoppingListEditTextTheme" />

    </LinearLayout>

    <EditText
        android:id="@+id/dialog_add_order_cart_et_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:theme="@style/ShoppingListEditTextTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <EditText
            android:id="@+id/dialog_add_order_cart_et_category"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="8"
            android:visibility="gone"
            android:inputType="textPersonName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:theme="@style/ShoppingListEditTextTheme" />

        <Spinner
            android:id="@+id/dialog_add_order_cart_spinner_color"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="#0000"
            android:gravity="bottom"
            android:visibility="gone" />

    </LinearLayout>

    <Spinner
        android:id="@+id/dialog_add_order_cart_spinner_category"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/dialog_add_order_cart_chb_must_bay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/necessarily_buy"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <Button
            android:id="@+id/dialog_add_order_cart_btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/dialog_add_order_cart_btn_create"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>