<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp">

    <EditText
        android:id="@+id/dialog_add_shopping_list_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/name_shopping_list"
        android:theme="@style/ShoppingListEditTextTheme">
        <requestFocus />
    </EditText>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end"
    android:orientation="horizontal"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingStart="10dp">

    <Button
        android:id="@+id/dialog_add_shopping_list_cancel_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/dialog_add_shopping_list_create_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/colorPrimary" />
</LinearLayout>

</LinearLayout>